soup-address: fix proxy enumerator implementation

When creating a GProxyAddressEnumerator, the destination URI passed to
it must include the port number, or the proxy may end up trying to
connect to port 0. libsoup was omitting the port number when it was
the default for the protocol.

https://bugzilla.gnome.org/show_bug.cgi?id=698163